# aws-token-vending-machine

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
aws_sandbox_cli/: __main__.py  cli.py  credentials.py  interactive.py  remote.py  setup.py
aws_token_vending_machine/: __init__.py  __main__.py  cli.py  config.py  credentials.py  env_file.py  interactive.py  remote.py
