[project]
name = "aws-token-vending-machine"
version = "0.1.0"
description = "Create AWS Organizations sandbox accounts and mint temporary credentials with one command."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "boto3>=1.43.3",
    "paramiko>=5.0.0",
    "questionary>=2.1.1",
]

[project.scripts]
aws-token-vending-machine = "aws_token_vending_machine.cli:main"
avtm = "aws_token_vending_machine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aws_token_vending_machine"]
